tests/outref/TSS01.ref
  # The below queries test that data types are correctly propagated from nested SELECTs
select * from names where id != firstname;
select * from (select * from names) where id != firstname;
select * from names where lastname != firstname;
select * from (select * from names) where lastname != firstname;
  # The below query was found at https://gitlab.com/YottaDB/DBMS/YDBOcto/issues/181#note_210480253
  # Although it was fixed by some prior commit, it is included here because it was recorded in #181
select col1 from (select id as col1 from names) n2;
select col1 from (select id::numeric as col1 from names) n2;
  # The below queries test that boolean expressions involving just "column" operands work (equivalent to "column != 0")
  # And issue errors if needed.
select (firstname = 'd' AND id) from names;
select (1 AND id) from names;
select (firstname = 'd' AND id = 0) from names;
select (firstname AND id) from names;
select id and 0 = 1 from names;
select id and (0 = 1) from names;
select (0 = 1) and (id = 1) from names;
select (0 = 1) and id from names;
select id and id from names;
  # The below query tests NULL usage in sub-queries. Is not directly related to #181 but was found to fail
  # while analyzing various issues related to #181.
select * from (select NULL from names);
select (col1 = '') from (select NULL as col1 from names);
select (col1 = NULL) from (select NULL as col1 from names);
select (col1 is NULL) from (select NULL as col1 from names);
select (col1 = 0) from (select NULL as col1 from names);
select (col1 = 'abcd') from (select NULL as col1 from names);
select (col1 is NULL) from (select NULL as col1 from names);
select (col1 is NOT NULL) from (select NULL as col1 from names);
select * from names where id IS NULL;
select * from names where id IS NOT NULL;
select * from names where firstname IS NULL;
select * from names where firstname IS NOT NULL;
[ WARN] PATH:LINENUM DATE TIME : Type mismatch: left INTEGER, right STRING
Error with syntax near (line 1, column 26):
select * from names where id != firstname;
                          ^^^^^^^^^^^^^^^
Type mismatch
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select * from names where id != firstname;
[ WARN] PATH:LINENUM DATE TIME : Type mismatch: left INTEGER, right STRING
Error with syntax near (line 1, column 42):
select * from (select * from names) where id != firstname;
                                          ^^^^^^^^^^^^^^^
Type mismatch
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select * from (select * from names) where id != firstname;
0|Zero|Cool
1|Acid|Burn
2|Cereal|Killer
3|Lord|Nikon
4|Joey|
5|Zero|Cool
0|Zero|Cool
1|Acid|Burn
2|Cereal|Killer
3|Lord|Nikon
4|Joey|
5|Zero|Cool
0
1
2
3
4
5
0
1
2
3
4
5
0
0
0
0
0
0
0
1
1
1
1
1
0
0
0
0
0
0
[ WARN] PATH:LINENUM DATE TIME : Type mismatch: left STRING, right INTEGER
Error with syntax near (line 1, column 8):
select (firstname AND id) from names;
        
Type mismatch
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select (firstname AND id) from names;
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
1
1
1
1
1






1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
0
0
0
0
0
0
0
0
0
0
0
0
1
1
1
1
1
1
0
0
0
0
0
0
0|Zero|Cool
1|Acid|Burn
2|Cereal|Killer
3|Lord|Nikon
4|Joey|
5|Zero|Cool
Added SET and/or Non-SET trigger on ^names named %ydboctoT*
0|Zero|Cool
1|Acid|Burn
2|Cereal|Killer
3|Lord|Nikon
4|Joey|
5|Zero|Cool

